<resources>
    <string name="app_name">Github App</string>
    <string name="image_description">Github User</string>
    <string name="error_no_data">Error, no data !</string>
    <string name="empty_no_data">Empty, no data !</string>
    <string name="details_activity">User Details</string>
    <string name="search">Search user</string>

    <string name="name">Name</string>
    <string name="colon">:</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>

    <string name="favorite">Favorite</string>
    <string name="favorite_activity">Favorite User</string>
    <string name="title_favorite">Favorite</string>
</resources>